# HW5-NW

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  pytest.yml
align/: __init__.py  align.py
data/: Balaeniceps_rex_BRD2.fa  Gallus_gallus_BRD2.fa  Mus_musculus_BRD2.fa  Tursiops_truncatus_BRD2.fa  test_seq1.fa  test_seq2.fa  test_seq3.fa  test_seq4.fa
substitution_matrices/: PAM100.mat  PAM250.mat
test/: test_align.py
